alignment fixes

--- a/src/Admin/Bundle/Resources/public/css/results.css
+++ b/src/Admin/Bundle/Resources/public/css/results.css
@@ -411,10 +411,10 @@ table.results.expandable > tbody > tr:nth-child(even) > td
 .results header > [class*="actions"],
 [class*="-row"] > [class*="actions"]:nth-last-child(2)
 {
-    width:15%;
     text-align: right;
-    padding-right: 32px;
-    margin-right: -32px;
+    width:5%;
+    padding-right: 2px;
+    margin-right: -2px;
 }
 
 .results header > label.checkbox:last-child,
@@ -756,13 +756,9 @@ table.results.expandable > tbody > tr:nth-child(even) > td
     display:inline-block !important;
 }
 
-.last-right-expand [class*="-row"] [class*="actions"]
-{
-    width:5%;
-}
-
 .last-right-expand .entity-search + .big-add {
     float:none;
+    margin-left:8px;
 }
 
 .last-right-expand [class*="-row"] > .counts {
@@ -805,9 +801,12 @@ table.results.expandable > tbody > tr:nth-child(even) > td
 .last-right-expand .form-actions > .entity-search
 {
     display:inline-block;
-    width:92%;
-    padding-right:6%;
+    width:86%;
     padding-left:6%;
+}
+
+.last-right-expand .empty-packs {
+    margin-left:3%;
 }
 
 .results > .views {
@@ -821,6 +820,7 @@ table.results.expandable > tbody > tr:nth-child(even) > td
     right:100%;
     min-height:42px;
     padding:inherit;
+    margin:inherit;
 }
 
 .results > .views ul {
