--- a/src/StudySauce/Bundle/Resources/public/css/groups.css
+++ b/src/StudySauce/Bundle/Resources/public/css/groups.css
@@ -68,18 +68,6 @@
     color:#09B;
 }
 
-.group-list .results .ss_group-row [class*="actions"],
-.list-packs .results .pack-row [class*="actions"]
-{
-    width:5%;
-    padding-right:2px;
-    margin-right: -2px;
-}
-
-.list-packs .empty-packs {
-    margin-left:5%;
-}
-
 .group-edit .results .ss_group-row [class*="actions"]
 {
     position:absolute;
